# Ravel-Lite

./: .gitignore  Cargo.toml  README.md  build.rs  config.sh  create-plan.md  release.toml  run-plan.sh
.atlas/: components.yaml  external-components.yaml  llm-cache.json  related-components.yaml
crates/knowledge-graph/: Cargo.toml
crates/knowledge-graph/src/: algorithms.rs  datalog.rs  item.rs  justification.rs  lib.rs  store.rs
defaults/: create-plan.md  discover-stage1.md  discover-stage2.md  survey-incremental.md  survey.md
docs/: architecture-next.md  architecture.md  build-config.sh  component-ontology-migration.md  component-ontology.md  manifest.txt  r7-related-projects-discovery-design.md  r7-related-projects-discovery-plan.md
phases/: analyse-work.md  compact.md  dream.md  reflect.md  triage.md  work.md
scripts/: build-docs.sh  check.sh  check_errorcode_chains.py  install-hooks.sh  release-build.sh  release-publish.sh
src/: atlas.rs  backlog_transitions.rs  component_ref.rs  config.rs  config.ts  config_lua.rs  create.rs  debug_log.rs  defeat_cascade.rs  directed_graph.rs  dream.rs  dream.ts  fixed_memory.rs  format.rs  format.ts  git.rs  git.ts  index.ts  init.rs  lib.rs  main.rs  migrate_v1_to_v2.rs  multi_plan.rs  phase-loop.ts  phase_loop.rs  phase_summary.rs  pivot.rs  plan_inspect.rs  plan_kg.rs  projects.rs  prompt-composer.ts  prompt.rs  related_components.rs  related_projects.rs  repos.rs  state.rs  subagent-dispatch.ts  subagent.rs  survey.rs  sync.rs  (+5 more)
test/: config.test.ts  dream.test.ts  prompt-composer.test.ts  subagent-dispatch.test.ts  (+1 more)
(+201 files in other folders)
